--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 90vh;
   display: flex;
+  background-color: #ede6e6;
 }
 
 .contact .leftSide {
@@ -55,7 +56,7 @@ form textarea {
 input::placeholder,
 textarea::placeholder {
   font-weight: bold;
-  color: black;
+  color: rgb(67, 65, 65);
   font-family: Arial, Helvetica, sans-serif;
 }
 form input:focus,
@@ -65,7 +66,7 @@ textarea:focus {
 
 form label {
   margin-top: 15px;
-  color: grey;
+  color: rgb(0, 0, 0);
 }
 
 form button {
