--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(180, 129, 151, 0.2);
+  background-color: #d8c4c4;
 }
 .menu .menuTitle {
   font-family: Arial, Helvetica, sans-serif;
